tests/compile-fail/der_option_custom_error.stderr
error[E0308]: mismatched types
  --> tests/compile-fail/der_option_custom_error.rs:18:5
   |
17 | fn should_fail_for_now<'a>(input: &'a [u8]) -> ParseResult<'a, T, CustomError> {
   |                                                ------------------------------- expected `Result<(&'a [u8], Option<u32>), asn1_rs::Err<CustomError>>` because of return type
18 |     T::from_der(input)
   |     ^^^^^^^^^^^^^^^^^^ expected `CustomError`, found `asn1_rs::Error`
   |
   = note: expected enum `Result<(&'a [u8], Option<u32>), asn1_rs::Err<CustomError, CustomError>>`
              found enum `Result<(&[u8], Option<u32>), asn1_rs::Err<asn1_rs::Error, asn1_rs::Error>>`
